# game_of_life

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
src/: Dockerfile
src/app/internal/: main.py
src/app/internal/core/: db.py
src/app/internal/game/: dependencies.py  services.py  transports.py
src/app/internal/game/dto/: requests.py  responses.py
src/app/internal/grid/: dependencies.py  domains.py  repositories.py  services.py
src/app/pkg/: errors.py  responses.py
src/config/: settings.py
