[tool.poetry]
name = "game of life"
version = "0.1.0"
description = ""
authors = ["maxim.shirokov <maxim.shirokov547@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.17.6"
httpx = "^0.23.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest_mock = "^3.8.1"
fastapi = "^0.87.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^4.0.1"

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 120
profile = "black"

[tool.black]
line-length = 120
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
